# verilator_ams

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
examples/adc_sar/: CMakeLists.txt  config.yaml  main.cpp  run.sh
examples/adc_sar/spice/: adc_sar_ideal.spice
examples/adc_sar/verilog/: ams_top.sv
examples/adc_sar_ladder/: CMakeLists.txt  config.yaml  main.cpp  run.sh
examples/adc_sar_ladder/spice/: adc_sar_ladder.spice
examples/adc_sar_ladder/verilog/: ams_top.sv  sar_adc_controller.sv
examples/r_ladder_dac/: CMakeLists.txt  config.yaml  main.cpp  run.sh
examples/r_ladder_dac/spice/: r_ladder_dac.spice
examples/r_ladder_dac/verilog/: dac_driver.sv
examples/r_ladder_dac_sky130/: CMakeLists.txt  config.yaml  main.cpp  run.sh
examples/r_ladder_dac_sky130/spice/: r_ladder_dac_sky130.spice
examples/r_ladder_dac_sky130/verilog/: ams_top.sv
examples/two_stage_opamp/: CMakeLists.txt  config.yaml  main.cpp  run.sh
examples/two_stage_opamp/verilog/: ams_top.sv  square_wave_driver.sv
examples/two_stage_opamp/xschem/: two_stage_opamp.sch  two_stage_opamp.sym
examples/uvm_r_ladder_dac/: bench.toml  config.yaml  main.cpp  run.sh
examples/uvm_r_ladder_dac/py/: Makefile  bench.toml  config.yaml  run.sh
examples/uvm_r_ladder_dac/py/tb/: __init__.py  r_ladder_dac_test.py
examples/uvm_r_ladder_dac/py/tb/r_ladder_dac_pkg/: __init__.py  r_ladder_dac_agent.py  r_ladder_dac_coverage.py  r_ladder_dac_driver.py  r_ladder_dac_env.py  r_ladder_dac_monitor.py  r_ladder_dac_result_item.py  r_ladder_dac_scoreboard.py  r_ladder_dac_seq_item.py  r_ladder_dac_sequence.py  r_ladder_dac_sequencer.py
examples/uvm_r_ladder_dac/py/verilog/: ams_top.sv
examples/uvm_r_ladder_dac/sv/: Makefile  bench.toml  run.sh
examples/uvm_r_ladder_dac/sv/tb/: r_ladder_dac_test.sv
examples/uvm_r_ladder_dac/sv/tb/r_ladder_dac_pkg/: r_ladder_dac_coverage.sv  r_ladder_dac_driver.sv  r_ladder_dac_monitor.sv  r_ladder_dac_pkg.sv  r_ladder_dac_scoreboard.sv  r_ladder_dac_sequencer.sv
examples/uvm_r_ladder_dac/sv/verilog/: ams_top.sv
examples/uvm_r_ladder_dac/tb/: r_ladder_dac_test.sv
examples/uvm_r_ladder_dac/tb/r_ladder_dac_pkg/: r_ladder_dac_agent.sv  r_ladder_dac_env.sv  r_ladder_dac_result_item.sv  r_ladder_dac_seq_item.sv  r_ladder_dac_sequence.sv
examples/uvm_r_ladder_dac/verilog/: ams_top.sv  r_ladder_dac_dut.sv  r_ladder_dac_if.sv
include/ams/: ams_bridge.h  ams_dpi.h  ams_dpi_pkg.sv  ams_testbench.h  ams_types.h  config_parser.h  ngspice_interface.h
src/: ams_dpi.cpp  ngspice_interface.cpp
tools/: ams_sim.py
tools/ams_py/ams/: __init__.py  ams_bridge.py
